Implemented login logic

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -20,7 +20,7 @@
                     You successfully signed up! Please continue to the <a>login</a> page.
                 </div>
                 <div id="signupFailMsg" th:if="${signupFailMsg}" class="alert alert-danger">
-                    <span th:text="${signupErrorMsg}"></span>
+                    <span th:text="${signupFailMsg}"></span>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
