--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,6 +10,9 @@
     </head>
     <body class="p-3 mb-2 bg-light text-black">
         <div class="container">
+            <form th:action="@{/home}" method="POST">
+                <button type="submit" class="btn btn-secondary float-left">TEST</button>
+            </form>
             <div id="logoutDiv">
                 <form th:action="@{/logout}" method="POST">
                     <button type="submit" class="btn btn-secondary float-right">Logout</button>
@@ -65,8 +68,11 @@
                             + Add a New Note
                         </button>
 
-                        <div class="table-responsive">
-                            <table class="table table-striped" id="userTable">
+                        <div  class="table-responsive">
+                            <div th:if="${#lists.isEmpty(listNotes)}">
+                                There are no notes. Create some!
+                            </div>
+                            <table  th:if="${not #lists.isEmpty(listNotes)}" class="table table-striped" id="userTable">
                                 <thead>
                                     <tr>
                                         <th style="width: 20%" scope="col"></th>
@@ -75,13 +81,13 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr>
+                                    <tr th:each="currNote : ${listNotes}">
                                         <td>
                                             <button type="button" class="btn btn-success">Edit</button>
                                             <a class="btn btn-danger">Delete</a>
                                         </td>
-                                        <th scope="row">Example Note Title</th>
-                                        <td>Example Note Description </td>
+                                        <th scope="row" th:text="${currNote.noteTitle}"></th>
+                                        <td th:text="${currNote.noteDescription}"></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -97,15 +103,15 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="#" method="POST">
+                                        <form th:object="${newNote}" th:action="@{'/home'}" method="POST">
                                             <input type="hidden" name="noteId" id="note-id">
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">Title</label>
-                                                <input type="text" name= "noteTitle" class="form-control" id="note-title" maxlength="20" required>
+                                                <input th:field="*{noteTitle}" type="text" name= "noteTitle" class="form-control" id="note-title" maxlength="20" required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="note-description" class="col-form-label">Description</label>
-                                                <textarea class="form-control" name="noteDescription" id="note-description" rows="5" maxlength="1000" required></textarea>
+                                                <textarea th:field="*{noteDescription}" class="form-control" name="noteDescription" id="note-description" rows="5" maxlength="1000" required></textarea>
                                             </div>
                                             <button id="noteSubmit" type="submit" class="d-none"></button>
                                         </form>
