--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,9 +10,6 @@
     </head>
     <body class="p-3 mb-2 bg-light text-black">
         <div class="container">
-            <form th:action="@{/home}" method="POST">
-                <button type="submit" class="btn btn-secondary float-left">TEST</button>
-            </form>
             <div id="logoutDiv">
                 <form th:action="@{/logout}" method="POST">
                     <button type="submit" class="btn btn-secondary float-right">Logout</button>
@@ -83,14 +80,10 @@
                                 <tbody>
                                     <tr th:each="currNote : ${listNotes}">
                                         <td>
-                                            <button type="button" class="btn btn-success">Edit</button>
+                                            <button  th:onclick="javascript: showNoteModal([[${currNote.noteId}]],[[${currNote.noteTitle}]],[[${currNote.noteDescription}]])"  type="button" class="btn btn-success">Edit</button>
                                             <a name="deleteNoteButton" th:href="@{/deleteNote/{noteId}(noteId=${currNote.getNoteId()})}" class="btn btn-danger">Delete</a>
-                                            <!--<a th:href="@{/home/deleteNote(noteId=${currNote.getNoteId()})}" class="btn btn-danger">Delete</a>-->
-                                            <!--<form method="POST" th:action="@{/home}">
-                                                <button th:name="deleteNote" th:value="${currNote.getNoteId()}" type="submit" class="btn btn-danger">Delete</button>
-                                            </form>-->
                                         </td>
-                                        <th scope="row" th:text="${currNote.getNoteId()}"></th>
+                                        <th scope="row" th:text="${currNote.getNoteTitle()}"></th>
                                         <td th:text="${currNote.getNoteDescription()}"></td>
                                     </tr>
                                 </tbody>
@@ -107,7 +100,7 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <form th:object="${newNote}" th:action="@{/home}" method="POST">
+                                        <form th:object="${newNote}" th:action="@{/notes}" method="POST">
                                             <input type="hidden" name="noteId" id="note-id">
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">Title</label>
@@ -117,7 +110,7 @@
                                                 <label for="note-description" class="col-form-label">Description</label>
                                                 <textarea th:field="*{noteDescription}" class="form-control" name="noteDescription" id="note-description" rows="5" maxlength="1000" required></textarea>
                                             </div>
-                                            <button th:name="createNote" id="noteSubmit" type="submit" class="d-none"></button>
+                                            <button th:name="createUpdateNote" id="noteSubmit" type="submit" class="d-none"></button>
                                         </form>
                                     </div>
                                     <div class="modal-footer">
