--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -25,7 +25,7 @@
                 </nav>
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-files" role="tabpanel" aria-labelledby="nav-files-tab">
-                        <form action="#" enctype="multipart/form-data" method="POST">
+                        <form th:action="@{/files/upload}" enctype="multipart/form-data" method="POST">
                             <div class="container">
                                 <div class="row" style="margin: 1em;">
                                     <div class="col-sm-2">
@@ -41,20 +41,25 @@
                             </div>
                         </form>
                         <div class="table-responsive">
-                            <table class="table table-striped" id="fileTable">
+                            <div th:if="${#lists.isEmpty(listFiles)}">
+                                There are no files. Upload some!
+                            </div>
+                            <table th:if="${not #lists.isEmpty(listFiles)}" class="table table-striped" id="fileTable">
                                 <thead>
                                     <tr>
                                         <th style="width: 20%" scope="col"></th>
-                                        <th style="width: 80%" scope="col">File Name</th>
+                                        <th style="width: 75%" scope="col">File Name</th>
+                                        <th style="width: 5%" scope="col">Size</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
+                                <tr th:each="currFile : ${listFiles}">
                                     <td>
                                         <a target="_blank" class="btn btn-success">View</a>
                                         <a  class="btn btn-danger">Delete</a>
                                     </td>
-                                    <th scope="row">ExampleFile.txt</th>
+                                    <th th:text="${currFile.getFilename()}" scope="row">ExampleFile.txt</th>
+                                    <td th:text="${currFile.getFileSize()}">ExampleFile.txt</td>
                                 </tr>
                                 </tbody>
                             </table>
