--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -55,8 +55,9 @@
                                 <tbody>
                                 <tr th:each="currFile : ${listFiles}">
                                     <td>
-                                        <a target="_blank" class="btn btn-success">View</a>
-                                        <a  class="btn btn-danger">Delete</a>
+                                        <!--<a target="_blank" class="btn btn-success">View</a>-->
+                                        <a th:href="@{/files/download/{fileId}(fileId=${currFile.getFileId()})}"class="btn btn-success">Download</a>
+                                        <a th:href="@{/files/delete/{fileId}(fileId=${currFile.getFileId()})}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th th:text="${currFile.getFilename()}" scope="row">ExampleFile.txt</th>
                                     <td th:text="${currFile.getFileSize()}">ExampleFile.txt</td>
@@ -85,7 +86,7 @@
                                 <tbody>
                                     <tr th:each="currNote : ${listNotes}">
                                         <td>
-                                            <button  th:onclick="javascript: showNoteModal([[${currNote.noteId}]],[[${currNote.noteTitle}]],[[${currNote.noteDescription}]])"  type="button" class="btn btn-success">Edit</button>
+                                            <button th:onclick="javascript: showNoteModal([[${currNote.noteId}]],[[${currNote.noteTitle}]],[[${currNote.noteDescription}]])"  type="button" class="btn btn-success">Edit</button>
                                             <a name="deleteNoteButton" th:href="@{/deleteNote/{noteId}(noteId=${currNote.getNoteId()})}" class="btn btn-danger">Delete</a>
                                         </td>
                                         <th scope="row" th:text="${currNote.getNoteTitle()}"></th>
