Implement credential insert, delete, retrieve

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -133,7 +133,10 @@
                         </button>
 
                         <div class="table-responsive">
-                            <table class="table table-striped" th:object="${credentials}" id="credentialTable">
+                            <div th:if="${#lists.isEmpty(listCredentials)}">
+                                There are no credentials saved. Save some!
+                            </div>
+                            <table th:if="${not #lists.isEmpty(listCredentials)}" class="table table-striped" id="credentialTable">
                                 <thead>
                                     <tr>
                                         <th style="width: 20%" scope="col"></th>
@@ -143,14 +146,14 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
+                                <tr th:each="currCred : ${listCredentials}">
                                     <td>
                                         <button type="button" class="btn btn-success">Edit</button>
-                                        <a class="btn btn-danger">Delete</a>
+                                        <a th:href="@{/credentials/delete/{credId}(credId=${currCred.getCredentialId()})}" class="btn btn-danger">Delete</a>
                                     </td>
-                                    <th scope="row">Example Credential URL</th>
-                                    <td>Example Credential Username</td>
-                                    <td>Example Credential Password</td>
+                                    <th th:text="${currCred.getUrl()}" scope="row">Example Credential URL</th>
+                                    <td th:text="${currCred.getUsername()}">Example Credential Username</td>
+                                    <td th:text="${currCred.getPassword()}">Example Credential Password</td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -166,7 +169,7 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        <form action="#" method="POST">
+                                        <form th:object="${newCred}" th:action="@{/credentials/createUpdateCredential}" method="POST">
                                             <input type="hidden" name="credentialId" id="credential-id">
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">URL</label>
