--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -148,7 +148,7 @@
                                 <tbody>
                                 <tr th:each="currCred : ${listCredentials}">
                                     <td>
-                                        <button th:onclick="javascript: showCredentialModal([[${currCred.getCredentialId()}]],[[${currCred.getUrl()}]],[[${currCred.getUsername()}]],[[${currCred.getPassword()}]])"  type="button" class="btn btn-success">Edit</button>
+                                        <button th:onclick="javascript: showCredentialModal([[${currCred.getCredentialId()}]],[[${currCred.getUrl()}]],[[${currCred.getUsername()}]],[[${_encryptionService.decryptValue(currCred.getPassword(), currCred.getKey())}]])"  type="button" class="btn btn-success">Edit</button>
                                         <a th:href="@{/credentials/delete/{credId}(credId=${currCred.getCredentialId()})}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th th:text="${currCred.getUrl()}" scope="row">Example Credential URL</th>
