--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -116,12 +116,12 @@
                                                 <label for="note-description" class="col-form-label">Description</label>
                                                 <textarea th:field="*{noteDescription}" class="form-control" name="noteDescription" id="note-description" rows="5" maxlength="1000" required></textarea>
                                             </div>
-                                            <button th:name="createUpdateNote" type="submit" class="d-none"></button>
+                                            <button th:name="createUpdateNote" id="noteSubmit" type="submit" class="d-none"></button>
                                         </form>
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <button id="noteSubmit" type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
+                                        <button id="noteFooterSubmit" type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
                                     </div>
                                 </div>
                             </div>
@@ -148,7 +148,7 @@
                                 <tbody>
                                 <tr th:each="currCred : ${listCredentials}">
                                     <td>
-                                        <button th:onclick="javascript: showCredentialModal([[${currCred.getCredentialId()}]],[[${currCred.getUrl()}]],[[${currCred.getUsername()}]],[[${_encryptionService.decryptValue(currCred.getPassword(), currCred.getKey())}]])"  type="button" class="btn btn-success">Edit</button>
+                                        <button th:onclick="javascript: showCredentialModal([[${currCred.getCredentialId()}]],[[${currCred.getUrl()}]],[[${currCred.getUsername()}]],[[${encryptionService.decryptValue(currCred.getPassword(), currCred.getKey())}]])"  type="button" class="btn btn-success">Edit</button>
                                         <a th:href="@{/credentials/delete/{credId}(credId=${currCred.getCredentialId()})}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th th:text="${currCred.getUrl()}" scope="row">Example Credential URL</th>
@@ -170,18 +170,18 @@
                                     </div>
                                     <div class="modal-body">
                                         <form th:object="${newCred}" th:action="@{/credentials/createUpdateCredential}" method="POST">
-                                            <input type="hidden" name="credentialId" id="credential-id">
+                                            <input th:field="*{credentialId}" type="hidden" name="credentialId" id="credential-id">
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">URL</label>
-                                                <input type="text" name= "url" class="form-control" id="credential-url" maxlength="100" required>
+                                                <input th:field="*{url}" type="text" name= "url" class="form-control" id="credential-url" maxlength="100" required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">Username</label>
-                                                <input type="text" name= "username" class="form-control" id="credential-username" maxlength="30" required>
+                                                <input th:field="*{username}" type="text" name= "username" class="form-control" id="credential-username" maxlength="30" required>
                                             </div>
                                             <div class="form-group">
                                                 <label for="note-title" class="col-form-label">Password</label>
-                                                <input type="text" name= "password" class="form-control" id="credential-password" maxlength="30" required>
+                                                <input th:field="*{password}" type="text" name= "password" class="form-control" id="credential-password" maxlength="30" required>
                                             </div>
                                             <button id="credentialSubmit" type="submit" class="d-none"></button>
                                         </form>
