--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -72,7 +72,7 @@
                         </button>
 
                         <div class="table-responsive">
-                            <div th:if="${#lists.isEmpty(listNotes)}">
+                            <div id="emptyNotesMsg" th:if="${#lists.isEmpty(listNotes)}">
                                 There are no notes. Create some!
                             </div>
                             <table th:if="${not #lists.isEmpty(listNotes)}" class="table table-striped" id="userTable">
@@ -86,8 +86,8 @@
                                 <tbody>
                                     <tr th:each="currNote : ${listNotes}">
                                         <td>
-                                            <button th:onclick="javascript: showNoteModal([[${currNote.noteId}]],[[${currNote.noteTitle}]],[[${currNote.noteDescription}]])"  type="button" class="btn btn-success">Edit</button>
-                                            <a name="deleteNoteButton" th:href="@{/notes/delete/{noteId}(noteId=${currNote.getNoteId()})}" class="btn btn-danger">Delete</a>
+                                            <button id="editNoteButton" th:onclick="javascript: showNoteModal([[${currNote.noteId}]],[[${currNote.noteTitle}]],[[${currNote.noteDescription}]])" type="button" class="btn btn-success">Edit</button>
+                                            <a id="deleteNoteButton" name="deleteNoteButton" th:href="@{/notes/delete/{noteId}(noteId=${currNote.getNoteId()})}" class="btn btn-danger">Delete</a>
                                         </td>
                                         <th scope="row" th:text="${currNote.getNoteTitle()}"></th>
                                         <td th:text="${currNote.getNoteDescription()}"></td>
