--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -133,7 +133,7 @@
                         </button>
 
                         <div class="table-responsive">
-                            <div th:if="${#lists.isEmpty(listCredentials)}">
+                            <div id="emptyCredentialsMsg" th:if="${#lists.isEmpty(listCredentials)}">
                                 There are no credentials saved. Save some!
                             </div>
                             <table th:if="${not #lists.isEmpty(listCredentials)}" class="table table-striped" id="credentialTable">
@@ -148,8 +148,8 @@
                                 <tbody>
                                 <tr th:each="currCred : ${listCredentials}">
                                     <td>
-                                        <button th:onclick="javascript: showCredentialModal([[${currCred.getCredentialId()}]],[[${currCred.getUrl()}]],[[${currCred.getUsername()}]],[[${encryptionService.decryptValue(currCred.getPassword(), currCred.getKey())}]])"  type="button" class="btn btn-success">Edit</button>
-                                        <a th:href="@{/credentials/delete/{credId}(credId=${currCred.getCredentialId()})}" class="btn btn-danger">Delete</a>
+                                        <button id="editCredentialButton" th:onclick="javascript: showCredentialModal([[${currCred.getCredentialId()}]],[[${currCred.getUrl()}]],[[${currCred.getUsername()}]],[[${encryptionService.decryptValue(currCred.getPassword(), currCred.getKey())}]])"  type="button" class="btn btn-success">Edit</button>
+                                        <a id="deleteCredentialButton" th:href="@{/credentials/delete/{credId}(credId=${currCred.getCredentialId()})}" class="btn btn-danger">Delete</a>
                                     </td>
                                     <th th:text="${currCred.getUrl()}" scope="row">Example Credential URL</th>
                                     <td th:text="${currCred.getUsername()}">Example Credential Username</td>
