--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -139,15 +139,15 @@
         <script th:src="@{/js/bootstrap.min.js}"></script>
 
         <script type="text/javascript">
-            const activeTabModel = "${activeTab}";
-            switch(true) {
-                case activeTabModel === 'files':
+            const activeTabModel = "[[${activeTab}]]";
+            switch(activeTabModel) {
+                case 'files':
                     $('#nav-files-tab').tab('show');
                     break;
-                case activeTabModel === 'notes':
+                case 'notes':
                     $('#nav-notes-tab').tab('show');
                     break;
-                case activeTabModel === 'credentials':
+                case 'credentials':
                     $('#nav-credentials-tab').tab('show');
                     break;
                 default:
@@ -173,4 +173,10 @@
             }
         </script>
     </body>
+    <footer class="page-footer font-small blue">
+        <div class="footer-copyright text-center py-3">© 2020 Copyright:
+            <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+            <div th:text="${activeTab}"></div>
+        </div>
+    </footer>
 </html>
