Added footer fragment

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -172,5 +172,6 @@
                 $('#credentialModal').modal('show');
             }
         </script>
+        <div th:insert="fragments/footer :: footer" class="footer"></div>
     </body>
 </html>
