--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,5 +33,6 @@
                 <label><a th:href="@{/signup}">Click here to sign up</a></label>
             </div>
         </div>
+        <div th:insert="fragments/footer :: footer" class="footer"></div>
     </body>
 </html>
