--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -45,5 +45,6 @@
                 <button id="signupSubmitButton" type="submit" class="btn btn-primary">Sign Up</button>
             </form>
         </div>
+        <div th:insert="fragments/footer :: footer" class="footer"></div>
     </body>
 </html>
