--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -25,5 +25,6 @@
                 <span>Click <a th:href="@{/home}">here</a> to continue.</span>
             </div>
         </div>
+        <div th:insert="fragments/footer :: footer" class="footer"></div>
     </body>
 </html>
