--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,6 +12,9 @@
         <div class="container justify-content-center w-25 p-3" style="background-color: #eeeeee; margin-top: 5em;">
             <h1 class="display-5">Login</h1>
             <form th:action="@{/login}" method="POST">
+                <div id="signupSuccessMsg" th:if="${signupSuccess}" class="alert alert-dark">
+                    You successfully signed up! Please continue to the <a>login</a> page.
+                </div>
                 <div id="invalidUserPassMsg" th:if="${param.error}" class="alert alert-danger">
                     Invalid username or password
                 </div>
