--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -7,13 +7,14 @@
 
     <link rel="stylesheet" type="text/css" media="all" th:href="@{/css/bootstrap.min.css}">
 
-    <title>Error</title>
+    <title>404 - Resource Not Found</title>
 </head>
 
 <body class="p-3 mb-2 bg-light text-black">
     <div class="container justify-content-center w-50 p-3" style="margin-top: 5em;">
         <div>
             <h1 class="display-5">Error</h1>
+            <div>The requested resource could not be found!</div>
             <span>Click <a th:href="@{/home}">here</a> to go back to Home.</span>
         </div>
     </div>
