--- a/src/main/resources/templates/fragments/noteModal.html
+++ b/src/main/resources/templates/fragments/noteModal.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <body>
-<div th:fragment="noteModal" class="modal fade" id="noteModal" tabindex="-1" role="dialog" aria-labelledby="noteModalLabel" aria-hidden="true">
+<div th:fragment="noteModal" class="modal fade" id="noteModal" tabindex="-1" role="dialog"
+     aria-labelledby="noteModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -15,18 +16,22 @@
                     <input type="hidden" name="noteId" id="note-id">
                     <div class="form-group">
                         <label for="note-title" class="col-form-label">Title</label>
-                        <input th:field="*{noteTitle}" type="text" name= "noteTitle" class="form-control" id="note-title" maxlength="20" required>
+                        <input th:field="*{noteTitle}" type="text" name="noteTitle" class="form-control" id="note-title"
+                               maxlength="20" required>
                     </div>
                     <div class="form-group">
                         <label for="note-description" class="col-form-label">Description</label>
-                        <textarea th:field="*{noteDescription}" class="form-control" name="noteDescription" id="note-description" rows="5" maxlength="1000" required></textarea>
+                        <textarea th:field="*{noteDescription}" class="form-control" name="noteDescription"
+                                  id="note-description" rows="5" maxlength="1000" required></textarea>
                     </div>
                     <button th:name="createUpdateNote" id="noteSubmit" type="submit" class="d-none"></button>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                <button id="noteFooterSubmit" type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">Save changes</button>
+                <button id="noteFooterSubmit" type="button" class="btn btn-primary" onclick="$('#noteSubmit').click();">
+                    Save changes
+                </button>
             </div>
         </div>
     </div>
